syntax = "proto3";

package service;

message DoubleDateRange {
    DateRange selected_period = 1;
    DateRange previous_period = 2; 
}

message DateRange {
    Period period_from = 1; //required
    Period period_to = 2; //required
}

message Period {
    int32 year = 1; //required
    int32 month = 2; //required
    int32 day = 3; //required
}

//Aggreated category response
message Categories {
    repeated CategoryResult result = 1;
    Period date = 3;
}
message CategoryResult {
    string category_name = 1;
    int32 ratings = 2;
    int32 score = 4;
}

service TicketService {
    rpc GetScoresByTickets(DateRange) returns (stream TicketScores);
    rpc GetAggregatedCategory(DateRange) returns (stream Categories);
    rpc GetPeriodOverPeriod(DoubleDateRange) returns (PeriodChange);
    rpc GetOveralQuality(DateRange) returns (Quality);
}

//Scores by ticket response
//Returns an array of tickets which include ticket ID and categories
message TicketScores {
    int32 id = 1;
    repeated CategoryResult result = 2;
}

//Overal quality score response
message Quality {
    int32 precentage = 1;
}

//Period over period response
message PeriodChange {
    int32 change = 3;
}
